# vlm_eval_framework

./: .gitignore  Give tasks for codeagent. give an overview how to.md  README.md  check_dependencies.py  check_imports_runtime.py  debug_imports.py  debug_rosbags.py  download_checkpoints.py  environment_ros.yaml  environment_ros_create.yaml  extract_notebook.py  inspect_rosbags.py  inspect_rosbags_2.py  pyproject.toml  reproduce_issue.py  reproduce_sam_issue.py  requirements-dev.txt  requirements.txt  setup.py  update_notebook.py  update_notebook_final.py  verify.py  verify_notebook.py
configs/datasets/: pascal_voc.yaml
configs/encoders/: radio_base.yaml
configs/experiments/: demo_simple_cnn.yaml  example.yaml
configs/heads/: linear_probe.yaml
examples/: README.md  quick_start.py
notebooks/: 01_quick_start.ipynb  02_training_example.ipynb  03_naradio_evaluation.ipynb  04_model_comparison.ipynb  05_zero_shot_classification.ipynb  06_naradio_comparison.ipynb  07_embed_slam_comparison.ipynb  embed_slam_comparison.ipynb  naradio_comparison.ipynb  tum_rosbag_loading.ipynb
tests/: __init__.py  conftest.py  test_base_classes.py  test_config.py  test_new_datasets.py  test_registries.py
vlm_eval/: __init__.py
vlm_eval/core/: __init__.py  base_dataset.py  base_encoder.py  base_head.py  config.py  registry.py
vlm_eval/datasets/: __init__.py  dummy.py  pascal_voc.py  replica.py  scannet.py  tum.py  tum_rosbag.py
vlm_eval/encoders/: __init__.py  clip.py  embed_slam_wrappers.py  naradio.py  radio.py  simple_cnn.py
vlm_eval/encoders/embed_slam/: concept_fusion.py  dino_fusion.py  naradio.py  naradio_fusion.py  segmentation.py  x_fusion.py
vlm_eval/heads/: __init__.py  linear_probe.py  zero_shot.py
